# KnowYourPC

./: .gitignore  Cargo.toml  README.en.md  README.md  index.html  opencode.json  package-lock.json  package.json  repomix-output.xml
.claude/: settings.local.json
.opencode/skills/: fastscan.md
crates/fastscan-mcp/: Cargo.toml
crates/fastscan-mcp/src/: error.rs  lib.rs  main.rs  models.rs  progress.rs  server_http.rs  server_stdio.rs  state.rs  tools.rs
crates/fastscan-mcp/src/scanner/: mod.rs  path_walk.rs  tree.rs
crates/fastscan-mcp/src/scanner/ntfs/: boot.rs  mod.rs  record.rs  runs.rs
crates/fastscan-mcp/src/win/: elevate.rs  mod.rs  volume.rs
mcp-configs/: claude-desktop.json  opencode.json
scripts/: copy-mcp.cjs
src/: format.ts  main.ts  styles.css  treemap.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  models.rs  tray.rs
src-tauri/src/scanner/: mod.rs  path_walk.rs  tree.rs
src-tauri/src/scanner/ntfs/: boot.rs  mod.rs  record.rs  runs.rs
src-tauri/src/win/: elevation.rs  hardware.rs  mod.rs  performance.rs  volume.rs
src/components/: sidebar.ts
src/panels/: diagnose-panel.ts  hardware-panel.ts  perf-panel.ts  scan-panel.ts
