[package]
name = "fast-disk-analyzer"
version = "0.1.0"
description = "WizTree-like NTFS MFT accelerated disk space analyzer"
authors = ["you"]
edition = "2021"

[lib]
name = "fast_disk_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
walkdir = "2"
thiserror = "1"
rayon = "1.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_UI_Shell",
  "Win32_Security",
  "Win32_System_Threading"
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
