[package]
name = "fastscan-mcp"
version = "0.1.21"
authors = ["叁七"]
edition = "2021"

[[bin]]
name = "fastscan-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
fs2 = "0.4"
thiserror = "1"
rayon = "1.10"
memmap2 = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
futures = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_UI_Shell",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }
